fix: header z-index

--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -7,7 +7,6 @@
     align-self: center;
     margin-top: 1.5vw;
     font-size: 1.25vw;
-    z-index: 5;
     width: 100%;
     
     .menus-container {
